mapeando entidades de negócio